Automatically backed up by Learn

--- a/main.css
+++ b/main.css
@@ -14,4 +14,28 @@ div {
   
 }
 
+#orange {
+  
+}
+
+#yellow {
+  
+}
+
+#green {
+  
+}
+
+#blue {
+  
+}
+
+#indigo {
+  
+}
+
+#violet {
+  
+}
+
 
